# test-cli-fake

./: README.md  pyproject.toml
.github/workflows/: test.yaml
src/test-cli-fake/: main.py
src/test_cli_fake/: main.py
