[tool.poetry]
name = "test-cli-fake"
version = "1.0.0"
description = "Démo éducative d'une fausse commande CLI via entry point Python"
authors = ["Cyriac Benousaad"]
license = "MIT"
readme = "README.md"
packages = [{ include = "test-cli-fake" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
git = "test-cli-fake.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
